force-app/main/default/objects/FC_CrewRun__c/FC_CrewRun__c.object-meta.xml
<CustomObject>
    <description>Stores the state of an asynchronous ForceCrew crew execution. Each record tracks one crew run across its Queueable jobs.</description>
    <label>Crew Run</label>
    <nameField>
        <label>Crew Run Name</label>
        <type>AutoNumber</type>
        <displayFormat>RUN-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Crew Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>