force-app/main/default/objects/FC_CrewRun__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <label>Correlation Id</label>
    <description>Optional external identifier supplied by the caller (e.g., a record Id or session Id). Carried through to FC_CrewEvent__e so the LWC can match the async result to the originating context.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>