force-app/main/default/objects/FC_CrewRun__c/fields/CrewConfigJson__c.field-meta.xml
<CustomField>
    <fullName>CrewConfigJson__c</fullName>
    <label>Crew Config JSON</label>
    <description>Serialised FC_CrewQueueable.CrewRunConfig — crew name, agent configs (role, goal, toolClassNames), task configs. Written once at enqueue time; read by every subsequent job.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>