force-app/main/default/objects/FC_CrewRun__c/fields/CrewName__c.field-meta.xml
<CustomField>
    <fullName>CrewName__c</fullName>
    <label>Crew Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>