force-app/main/default/objects/FC_CrewRun__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <description>Populated when Status = Failed. Contains the error that caused the crew to stop.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>