force-app/main/default/objects/FC_CrewRun__c/fields/FinalOutput__c.field-meta.xml
<CustomField>
    <fullName>FinalOutput__c</fullName>
    <label>Final Output</label>
    <description>The final answer produced by the crew — output of the last successful task. Written by the finalising job.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>