force-app/main/default/objects/FC_CrewRun__c/fields/ManagerHistoryJson__c.field-meta.xml
<CustomField>
    <fullName>ManagerHistoryJson__c</fullName>
    <label>Manager History JSON</label>
    <description>Serialised manager conversation history (list of {role, content}) for HIERARCHICAL crews. Persisted between FC_HierarchicalCrewQueueable rounds so the manager LLM sees the full conversation across chained jobs.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>