force-app/main/default/objects/FC_CrewRun__c/fields/TaskOutputsJson__c.field-meta.xml
<CustomField>
    <fullName>TaskOutputsJson__c</fullName>
    <label>Task Outputs JSON</label>
    <description>Serialised Map of task name to output string. Updated after each task completes. Read by subsequent tasks for context injection.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>